2015-07-16  Steven G. Kargl  <kargl@gcc.gnu.org>

	* io.c (check_char_variable): New function.
	(match_open_element, match_close_element, match_file_element,
	match_dt_element, match_inquire_element, match_wait_element): Use it.

2015-07-16  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66725
	* io.c (is_char_type): New function to test for BT_CHARACTER
	(gfc_match_open, gfc_match_close, match_dt_element): Use it.

2015-07-16  Release Manager

	* GCC 5.2.0 released.

2015-06-24  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/66549
	* resolve.c (resolve_global_procedure): Don't save and restore
	OpenMP state around the call to gfc_resolve.
	(gfc_resolve): Save OpenMP state on entry and restore it on return.

2015-06-14  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/66385
	Backport from trunk
	* frontend-passes.c (combine_array_constructor): Return early if
	inside a FORALL loop.

2015-06-14  Thomas Koenig  <tkoenig@gcc.gnu.org>

	* intrinsic.texi:  Change \leq to < in descrition of imaginary
	part in argument to log.

2015-06-11  Pierre-Marie de Rodat  <derodat@adacore.com>

	* f95-lang.c (gfc_create_decls): Register the main translation unit
	through the new debug hook.

2015-06-08  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66245
	* match.c (gfc_match_type_is, gfc_match_class_is):  Check if the
	return type spec or derived type spec is validate.

2015-06-05  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66347
	* resolve.c (apply_default_init_local): Do not dereference a NULL
	pointer.

2015-06-05  Russell Whitesides  <russelldub@gmail.com>
	    Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/40958
	PR fortran/60780
	PR fortran/66377
	* module.c (load_equiv): Add check for loading duplicate EQUIVALENCEs
	from different modules.  Eliminate the pruning of unused
	equivalence-objects


2015-06-02  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/66380
	* simplify.c (gfc_simplify_reshape): Convert assert into returning