@@ -1,5 +1,10 @@
 2015-07-16  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	PR fortran/56520
+	* gfortran.dg/pr56520.f90: New test.
+
+2015-07-16  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	* gfortran.dg/iomsg_2.f90: New test.
 
 2015-07-16  Steven G. Kargl  <kargl@gcc.gnu.org>
